5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1808_2580.log
== TEST (2019-06-09 16:23:24) 
-- CODE:
N = int("numero de linhas ")
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[ch]== N[ch - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    N = int("numero de linhas ")
ValueError: invalid literal for int() with base 10: 'numero de linhas '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:24:04) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[ch]== N[ch - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[ch]== N[ch - 1]):
NameError: name 'ch' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:24:20) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[ch]== N[ch - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[ch]== N[ch - 1]):
NameError: name 'ch' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:24:31) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[ch]== N[ch - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[ch]== N[ch - 1]):
NameError: name 'ch' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:24:57) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[i]== N[i - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[i]== N[i - 1]):
TypeError: 'int' object is not subscriptable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:25:41) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[i]== s[i - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    l = j + s[ch]
NameError: name 'ch' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:26:00) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[i]== s[i - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[ch]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    l = j + s[ch]
NameError: name 'ch' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:26:17) 
-- CODE:
N = int(input("numero de linhas "))
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[i]== s[i - 1]):
		j = j + 1 
	j = str(j)
	l = j + s[i]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:27:42) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	s = input("digite uma sequencia STRING: ")
	if(s[i]== s[i - 1]):
		j = j + 1 
	f = str(j)
	l = f + s[i]
print(l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:28:14) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	if(s[i]== s[i - 1]):
		j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:28:26) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	if(s[i]== s[i - 1]):
		j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:30:30) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	while(s[i]== s[i - 1]):
		j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:32:46) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	while(len(g) < len(s)):
		if(s[i]== s[i - 1]):	
			j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:32:58) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	while(len(g) < len(s)):
		if(s[i]== s[i - 1]):	
			j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:34:58) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	for i in range(1,N):
		if(s[i]== s[i - 1]):
			j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:35:10) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(1,N):
	for i in range(1,N):
		if(s[i]== s[i - 1]):
			j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(s[i]== s[i - 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:37:06) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(s[i]== s[i + 1]):
			j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:37:12) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(s[i]== s[i + 1]):
			j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:38:38) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)-1)):
			if(s[i]== s[i + 1]):
				j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    l = f + s[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:39:00) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)-1)):
			if(s[i]== s[i + 1]):
				j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    l = f + s[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:39:23) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)-1)):
			if(s[i]== s[i + 1]):
				j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    l = f + s[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:39:35) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)-1)):
			if(s[i]== s[i + 1]):
				j = j + 1 
	f = str(j)
	l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    l = f + s[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:40:41) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)-1)):
			if(s[i]== s[i + 1]):
				j = j + 1 
		f = str(j)
		l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    l = f + s[i]
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:41:05) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)-1)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    s = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:42:20) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s))):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:42:23) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
File "XXXX", line 7
    if(i < (len(s)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:42:30) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < (len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
File "XXXX", line 7
    if(i < (len(s)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 16:42:39) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:19:28) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(len(N)):
	for i in range(1,len(N)):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    for i in range(len(N)):
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:19:48) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(len(N)):
	for i in range(1,len(N)):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    for i in range(len(N)):
TypeError: object of type 'int' has no len()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:22:06) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:22:17) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:23:12) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    s = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:23:25) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
			f = str(j)
			l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    s = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:36:48) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:38:36) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:51:22) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:52:35) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:52:48) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:54:00) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 1
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:54:15) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 1
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:55:27) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,N):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 2 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:00:58) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,(len(s)-1)):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j +  
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
File "XXXX", line 9
    j = j +  
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:01:11) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,(len(s)-1)):
		if(i < len(s)):
			if(s[i -1]== s[i]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:02:02) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,(len(s)-1)):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(l)
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:02:52) 
-- CODE:
N = int(input("numero de linhas "))
s = input("digite uma sequencia STRING: ")
g = ""
j = 0
for i in range(0,N):
	for i in range(1,len(s)):
		if(i < len(s)):
			if(s[i]== s[i + 1]):
				j = j + 1 
				f = str(j)
				l = f + s[i]
	print(l)
	s = input("digite uma sequencia STRING: ")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if(s[i]== s[i + 1]):
IndexError: string index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
